syntax = "proto3";

package project.planton.provider.kubernetes.workload.signozkubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/workload/signozkubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/workload/signozkubernetes/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// signoz-kubernetes
message SignozKubernetes {
  // api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  // resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'SignozKubernetes'];

  // metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // spec
  SignozKubernetesSpec spec = 4 [(buf.validate.field).required = true];

  // status
  SignozKubernetesStatus status = 5;
}

// signoz-kubernetes status
message SignozKubernetesStatus {
  // stack-outputs
  SignozKubernetesStackOutputs outputs = 1;
}
